--- a/package.json
+++ b/package.json
@@ -1,5 +1,8 @@
 {
   "dependencies": {
-    "@nestjs/serve-static": "^3.0.1"
+    "@nestjs/serve-static": "^3.0.1",
+    "@nestjs/typeorm": "^9.0.1",
+    "mysql2": "^3.2.0",
+    "typeorm": "^0.3.13"
   }
 }
